add first div and description of application

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Akan Names</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
+    <div class="intro">
+      <h1>Know your Akan Name!<h1>
+      <p>This application takes a user's birthday and calculates the day of the week they were born then tells the their Akan(Ghanian) names depending on their gender.</p>
+    </div>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
