add second div and form element

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       <h1>Know your Akan Name!<h1>
       <p>This application takes a user's birthday and calculates the day of the week they were born then tells the their Akan(Ghanian) names depending on their gender.</p>
     </div>
+    <div class="content">
+      <form></form>
+    </div>
 
     <script src="js/scripts.js"></script>
   </body>
