--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
-    <div class="intro">
+    <div class="body">
+      <div class="intro">
       <h1>Know your Akan Name!<h1>
       <p>This application takes a user's birthday and calculates the day of the week they were born then tells the their Akan(Ghanian) names depending on their gender.</p>
     </div>
     <div class="content">
-      <form></form>
+      <form>
+        <label for="birthday">Your birthday:</label>
+        <input type="date"><br>
+        <p>What is your gender?</p>
+        <label for="Male">
+        <input id="Male" value="Male" type="radio" name="Male-Female">Male
+        </label><br>
+        <label for="Female">
+        <input id="Female" value="Female" type="radio" name="Male-Female">Female
+        </label>
+      </form>
     </div>
+  </div>
 
-    <script src="js/scripts.js"></script>
+  <script src="js/scripts.js"></script>
   </body>
 </html>
