add a submit button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         </label><br>
         <label for="Female">
         <input id="Female" value="Female" type="radio" name="Male-Female">Female
-        </label>
+        </label><br><br>
+        <input type="submit" value="submit">
       </form>
     </div>
   </div>
