add a correction to a typo

--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
   <body>
     <div class="body">
       <div class="intro">
-      <h1>Know your Akan Name!<h1>
-      <p>This application takes a user's birthday and calculates the day of the week they were born then tells the their Akan(Ghanian) names depending on their gender.</p>
-    </div>
-    <div class="content">
-      <form>
-        <label for="birthday">Your birthday:</label>
-        <input type="date"><br>
-        <p>What is your gender?</p>
-        <label for="Male">
-        <input id="Male" value="Male" type="radio" name="Male-Female">Male
-        </label><br>
-        <label for="Female">
-        <input id="Female" value="Female" type="radio" name="Male-Female">Female
-        </label><br><br>
-        <input type="submit" value="submit">
-      </form>
-    </div>
+        <h1>Know your Akan Name!<h1>
+        <p>This application takes a user's birthday and calculates the day of the week they were born then tells them their Akan(Ghanian) names depending on their gender.</p>
+      </div>
+      <div class="content">
+        <form>
+          <label for="birthday">Your birthday:</label>
+          <input type="date"><br>
+          <p>What is your gender?</p>
+          <label for="Male">
+          <input id="Male" value="Male" type="radio" name="Male-Female">Male
+          </label><br>
+          <label for="Female">
+          <input id="Female" value="Female" type="radio" name="Male-Female">Female
+          </label><br><br>
+          <input type="submit" value="submit">
+        </form>
+      </div>
   </div>
 
   <script src="js/scripts.js"></script>
