--- a/index.html
+++ b/index.html
@@ -26,8 +26,52 @@
           <input type="submit" value="submit">
         </form>
       </div>
-  </div>
+      <div class="table">
+        <table border="1" cellpadding = "5" cellspacing = "5">
+          <tr>
+            <td><b>Day of the week</b></td>
+            <td><b>Male</b></td>
+            <td><b>Female</b></td>
+          </tr>
+          <tr>
+            <td>Sunday</td>
+            <td>Kwasi</td>
+            <td>Akosua</td>
+          </tr>
+          <tr>
+            <td>Monday</td>
+            <td>Kwadwo</td>
+            <td>Adwoa</td>
+          </tr>
+          <tr>
+            <td>Tuesday</td>
+            <td>Kwabena</td>
+            <td>Abenaa</td>
+          </tr>
+          <tr>
+            <td>Wednesday</td>
+            <td>Kwaku</td>
+            <td>Akua</td>
+          </tr>
+          <tr>
+            <td>Thursday</td>
+            <td>Yaw</td>
+            <td>Yaa</td>
+          </tr>
+          <tr>
+            <td>Friday</td>
+            <td>Kofi</td>
+            <td>Afua</td>
+          </tr>
+          <tr>
+            <td>Saturday</td>
+            <td>Kwame</td>
+            <td>Ama</td>
+          </tr>
+        </table>
+      </div>
+    </div>
 
-  <script src="js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
